--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -2,6 +2,7 @@ main {
   height: 95vh;
   background-color: #011638;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -16,6 +17,20 @@ main {
   padding: 5vh;
   height: 15vh;
   gap: 2vh;
+  border-radius: 8px;
+  background-color: #eef0f2;
+}
+
+.switch {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 20vh;
+  border: 2px solid #eec643;
+  padding: 2vh;
+  height: 1vh;
+  gap: 1vh;
   border-radius: 8px;
   background-color: #eef0f2;
 }
